// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commitPrice, with option 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`commitPrice, with option 2`] = `
Array [
  Array [
    "address",
    60000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`commitPrice, without option 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`commitPrice, without option 2`] = `
Array [
  Array [
    "address",
    60000,
    Object {},
  ],
]
`;

exports[`commitPrice, wrong env 1`] = `"Wrong Env"`;

exports[`getLastPrice 1`] = `
Object {
  "price": 1e-16,
  "timestamp": 123456789000,
}
`;

exports[`setValue 1`] = `
Array [
  Array [
    0,
    100,
  ],
  Array [
    0,
    100,
  ],
]
`;

exports[`setValue 2`] = `
Array [
  Array [
    "address",
    50000,
    Object {},
  ],
  Array [
    "address",
    50000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`startMagi, with option 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`startMagi, with option 2`] = `
Array [
  Array [
    "address",
    120000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`startMagi, without option 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`startMagi, without option 2`] = `
Array [
  Array [
    "address",
    120000,
    Object {},
  ],
]
`;

exports[`startMagi, wrong env 1`] = `"Wrong Env"`;

exports[`updateOperator 1`] = `
Array [
  Array [
    "address",
    1000000,
    Object {},
  ],
  Array [
    "address",
    1000000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`updatePriceFeed 1`] = `
Array [
  Array [
    0,
  ],
  Array [
    0,
  ],
]
`;

exports[`updatePriceFeed 2`] = `
Array [
  Array [
    "address",
    120000,
    Object {},
  ],
  Array [
    "address",
    120000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`updateRoleManager 1`] = `
Array [
  Array [
    "newRoleManager",
  ],
  Array [
    "newRoleManager",
  ],
]
`;

exports[`updateRoleManager 2`] = `
Array [
  Array [
    "address",
    1000000,
    Object {},
  ],
  Array [
    "address",
    1000000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;
